# PROD-Backend-Rust

./: .gitignore  README.md  docker-compose.yaml
solution/: Cargo.toml  Dockerfile  run_tests.sh
solution/antifraud-backend/: Cargo.toml
solution/antifraud-backend/src/: database.rs  dsl.rs  errors.rs  models.rs  routes.rs
solution/idea/: README.md  openapi.yml
solution/idea/docs/: README.md  assigment.md  dsl.md  faq.md  getting-started.md  glossary.md  local-run.md
solution/migrations/: 001_create_tables.sql
solution/patches/home-0.5.11/: Cargo.toml  Cargo.toml.orig  README.md
solution/patches/home-0.5.11/src/: env.rs  lib.rs  windows.rs
solution/src/: database.rs  dsl.rs  errors.rs  main.rs  models.rs  routes.rs  services.rs  validation.rs
solution/tests/: README.md  integration_tests.rs  sample_test.rs
